# rollercoaster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HardwareConnections.ods  tools
pins/: CMakeLists.txt  GeneratePinHeader.sh  pins.csv
rollercoaster/: Block.cpp  Block.h  CMakeLists.txt  EStatus.h  IoInput.cpp  IoInput.h  IoOutput.cpp  IoOutput.h  Lift.cpp  Lift.h  Logger.cpp  Logger.h  NodeIds.h  Rollercoaster.cpp  Rollercoaster.h  Station.cpp  Station.h  StorageTrack.cpp  StorageTrack.h  Transfer.cpp  Transfer.h  main.cpp
src/: Block.cpp  Block.h  BrakeRun.cpp  BrakeRun.h  Button.cpp  Button.h  CMakeLists.txt  EMode.h  EStatus.h  FunctionPtr.h  Gates.cpp  Gates.h  IBlock.h  IoConfig.cpp  IoConfig.h  IoInput.cpp  IoInput.h  IoOutput.cpp  IoOutput.h  LedButton.cpp  LedButton.h  Lift.cpp  Lift.h  Logger.cpp  Logger.h  Mode.cpp  Mode.h  NodeIds.h  RollerSketch.cpp  Rollercoaster.cpp  Rollercoaster.h  SStream.cpp  SStream.h  Station.cpp  Station.h  StorageTrack.cpp  StorageTrack.h  TrackSwitch.cpp  TrackSwitch.h  Transfer.cpp  (+2 more)
